--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,3 +80,25 @@ a {
         line-height: 200px;
     }
 }
+.container{
+    position: relative;
+    margin-left: 2%;
+}
+.cardBox {
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*text-align: center;*/
+    float: left;
+    margin-right: 10px;
+    padding: 5px;
+    padding-top: 15px;
+}
+.textarea {
+    width: 79%;
+    min-height: 140px;
+    background-color: #fff;
+    text-indent:29px;
+    padding: 2% 2% 0 2%;
+    width: 100%;
+    border-radius: 3%;
+}
